--- a/unity-test1.CSharp.csproj
+++ b/unity-test1.CSharp.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Assets\GlobalController.cs" />
     <Compile Include="Assets\MainScene.cs" />
+    <Compile Include="Assets\MsgText.cs" />
     <Compile Include="Assets\WebCamBehavior.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
