--- a/unity-test1.CSharp.csproj
+++ b/unity-test1.CSharp.csproj
@@ -64,12 +64,18 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="zxing.unity">
+      <HintPath>Assets\zxing.unity.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\GlobalController.cs" />
     <Compile Include="Assets\MainScene.cs" />
     <Compile Include="Assets\MsgText.cs" />
     <Compile Include="Assets\WebCamBehavior.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\zxing.unity.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
