--- a/unity-test1.CSharp.csproj
+++ b/unity-test1.CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\GlobalController.cs" />
     <Compile Include="Assets\MainScene.cs" />
     <Compile Include="Assets\MsgText.cs" />
+    <Compile Include="Assets\ScoreText.cs" />
     <Compile Include="Assets\WebCamBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
